--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,7 +1,2 @@
-<% if @song.any? %>
-  <% @song.each do |song| %> 
-    <%= link_to song.name %>
-    <% end %>
-<% else %>
-  <h4> No songs have been added </h4>
-    <% end %>
+<h4> <%= @song.title %> </h4>
+
