--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,38 +1,1 @@
-<div class='container' >
-<h1>Songs by: <%= @artist.name %> </h1>
-<hr />
-
-<% if @artist.songs.any? %>
-<table>
-  <tr>
-      <th>Song</th>
-      <th>Edit</th> 
-      <th> Delete </th>
-    </tr>
-    <tr>
-  <% @artist.songs.each do |song| %> 
-  <td> 
-   <h4> <%= song.title %> </h4>
-  </td>
-  <td>
-    <%= link_to 'edit', edit_artist_song_path(@artist, song)%>
-    </td>
-  <td>
-    <center> <%= link_to 'delete', artist_song_path(@artist, song), method: :delete %>  </center>
-  </td>
-   </tr>
-    <% end %>
-</table>
-
-
-
-<% else %>
-  <h4> No songs have been added </h4>
-    <% end %>
-
-    <br />
-<%= link_to 'Add Song', new_artist_song_path(@artist), class: 'btn btn-success' %>
-<%= link_to 'Back to All Artists', artists_path, class: 'btn btn-primary' %>
- <%= link_to 'Delete Artist', artist_path(@artist), method: :delete, 
-    data: {confirm: 'Really Delete'} , class: 'btn btn-warning'%>
-  </div>
+<h1> Artist </h1>
