--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,22 +1,28 @@
 <div class='container' >
+
 <h1>List of Songs</h1>
 <hr />
-
-
+<div class='white'>
 <% if @songs.any? %>
-  <% @songs.each do |song| %> 
-   <ul>
-   <li>
-   <h4> <%= link_to song.title, chart_song_path(@chart, song), class: 'bg-success' %>  <h4>
-    </li>
-   </ul>
+  <table>
+  <% @songs.each_with_index do |song, i| %> 
+    <tr>
+      <td><%= i += 1 %> </td>
+      <td> <h4> <%= link_to song.title, edit_chart_song_path(@chart, song) %> 
+        </h4></td>
+   </tr>
     <% end %>
+  </table>
   <% else %>
   <h4> No Artists have been added </h4>
   <% end %>
+  </div>
 
 
-  <%= link_to 'Add New Song', new_chart_song_path(@chart), class: 'btn btn-primary' %>
+<%= link_to 'view artists', song_artists_path(@songs), class: 'btn btn-primary' %>
+  <!-- <%= link_to 'View', new_chart_song_path(@chart), class: 'btn btn-primary' %> -->
    <%= link_to 'Back to Charts', charts_path, class: 'btn btn-primary' %>
  
 </div>
+
+
