--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,4 +1,5 @@
  <h1>Artists Page</h1>
  <% @artists.each do |artist| %> 
-   <h4> <%= link_to artist.name %> </h4>
+   <h4> <%= link_to artist.name, artist_songs_path(artist) %> </h4>
  <% end %>
+  <%= link_to 'Home', charts_path, class: 'btn btn-primary' %>
